# rec_engine_stream

./: README.md  gibbs.py  pyproject.toml
rec_engine/: run_read_data.py
rec_engine/data/google_local_review/: first.1000.places.clean.json  first.1000.reviews.clean.json  first.1000.users.clean.json
rec_engine/lib/: optimize_numeric.py  rec_engine.py
simulations/gibbs/processed/: allres.csv
simulations/gibbs/workflow/: gibbs.cmd  gibbs_funcs.py  gibbs_simu 2.py  gibbs_simu.py  gibbs_simulation_with_diagnosis_parallel.ipynb  post_process.py  slurm-16772828.out  slurm-16772860.out  submit_gibbs.sh  try_gibbs.sh
simulations/gibbs/workflow/err_file/: 16652938.err  16652943.err  16653041.err  16653043.err  16653258.err  16653261.err  16653293.err  16653355.err  16772829.err  16772830.err  16772862.err
simulations/gibbs/workflow/out_file/: 16653293.out  16653355.out  16653356.out  16772830.out
simulations/gibbs/workflow/results/: alpy_scale_1.0n_0m_0L_2.csv  alpy_scale_1.0n_0m_0L_5.csv  alpy_scale_1.0n_0m_1L_10.csv  alpy_scale_1.0n_0m_1L_5.csv  alpy_scale_1.0n_0m_2L_10.csv  alpy_scale_1.0n_0m_2L_5.csv  alpy_scale_1.0n_0m_3L_10.csv  alpy_scale_1.0n_0m_3L_2.csv  alpy_scale_1.0n_0m_3L_5.csv  alpy_scale_1.0n_1m_0L_5.csv  alpy_scale_1.0n_1m_1L_2.csv  alpy_scale_1.0n_1m_2L_5.csv  alpy_scale_1.0n_1m_3L_10.csv  alpy_scale_1.0n_1m_3L_2.csv  alpy_scale_1.0n_1m_3L_5.csv  alpy_scale_1.0n_2m_0L_2.csv  alpy_scale_1.0n_2m_0L_5.csv  alpy_scale_1.0n_2m_1L_5.csv  alpy_scale_1.0n_2m_2L_10.csv  alpy_scale_1.0n_2m_2L_2.csv  alpy_scale_1.0n_2m_2L_5.csv  alpy_scale_1.0n_2m_3L_2.csv  (+417 more)
(+432 files in other folders)
