[tool.poetry]
name = "rec_engine"
version = "0.1.0"
description = ""
authors = ["Fei Wang"]

[tool.poetry.dependencies]
python = "^3.8"
arviz = "^0.9.0"
dask = "^2.27.0"
toolz = "^0.10.0"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]
numpy = "^1.19.2"
pandas = "^1.1.2"
pymc3 = "^3.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
